Support discriminator multitenancy